JSW Devsb/src/objects/Visit_Report__c.object
<CustomObject>
    <fields>
        <fullName>Account1__c</fullName>
        <formula>Visit__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Visit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Any_Schemes_Running__c</fullName>
        <label>Any Schemes Running</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Any_image_to_be_captured__c</fullName>
        <label>Any image to be captured</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Branding_Activities__c</fullName>
        <label>Branding Activities</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brief_Details_Of_Call__c</fullName>
        <label>Brief Details Of Call</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commercial_Comments__c</fullName>
        <label>Commercial Remarks</label>
        <picklist>
            <picklistValues>
                <fullName>Rate  to be quoted &amp; supply source identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price sensitive customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material not available at counter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material not supplied on time</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor_Brands__c</fullName>
        <label>Competitor Brands</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Price__c</fullName>
        <label>Competitor Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_worthiness__c</fullName>
        <label>Credit worthiness</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Average_Monthly_Volume__c</fullName>
        <label>Current Average Monthly Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_influencer_Email_ID__c</fullName>
        <label>Customer/influencer Email ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_influencer_Mobile_No__c</fullName>
        <label>Customer/influencer  Mobile No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Date_of_Activity__c</fullName>
        <label>Date of Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Communication__c</fullName>
        <label>Date of Communication</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Customer_SAP_Code__c</fullName>
        <label>Dealer / Customer SAP Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_date_committed__c</fullName>
        <label>Due date committed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Volume_Committment_to_JSW__c</fullName>
        <label>Expected Volume Committment to JSW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Influencer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Influencer Name</label>
        <referenceTo>Influencer__c</referenceTo>
        <relationshipName>Visit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issues_faced_service_requests__c</fullName>
        <label>Issues faced/ service requests</label>
        <picklist>
            <picklistValues>
                <fullName>Branding Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Techinical isues to be resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>meets to be conducted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Followup for appointing non JSW dealers;</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JSW_Bag_Visibility__c</fullName>
        <label>JSW Bag Visibility</label>
        <picklist>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JSW_Shop_Board__c</fullName>
        <label>JSW Shop Board Condition</label>
        <picklist>
            <picklistValues>
                <fullName>Good_Condition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Condition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Absent</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JSW_Supply_Details_MT__c</fullName>
        <inlineHelpText>JSW Supply Details (MT) from System or Dealer</inlineHelpText>
        <label>JSW Supply Details (MT)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JSW_share_of_wallet__c</fullName>
        <label>JSW share of wallet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead1__c</fullName>
        <formula>Lead__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Visit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_of_TSO__c</fullName>
        <label>Location of TSO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Year__c</fullName>
        <label>Month/Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Concerned_Marketing_Officer__c</fullName>
        <label>Name of Concerned Marketing Officer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Customer_Influencer__c</fullName>
        <label>Name of  Customer/ Influencer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Dealer_Retailer_to_whom_Details__c</fullName>
        <inlineHelpText>Name of Dealer/ Retailer to whom Details Communicated</inlineHelpText>
        <label>Name of Dealer/ Retailer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_TS_person__c</fullName>
        <label>Name of  TS person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POP_material_comments__c</fullName>
        <label>POP material – comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partners__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partners</label>
        <referenceTo>Business_Partner__c</referenceTo>
        <relationshipName>Visit_Reports_Unplanned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Collected_by_SO__c</fullName>
        <label>Payment Collected by SO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_Payment_Amount_Committed__c</fullName>
        <label>Pending Payment Amount Committed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Place_Address__c</fullName>
        <label>Place/Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Price_WSP_RS__c</fullName>
        <label>Price - WSP, RS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_bill_price__c</fullName>
        <label>Price – bill price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>PSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concreel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Site</label>
        <referenceTo>Project_Site__c</referenceTo>
        <relationshipName>Visit_Reports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Visit__c</fullName>
        <label>Purpose of Visit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reputation_in_mkt__c</fullName>
        <label>Reputation in mkt</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Responsibility__c</fullName>
        <label>Responsibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_No__c</fullName>
        <label>S.No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>Project_Site__c</referenceTo>
        <relationshipName>Visit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_level_JSW_product_wise__c</fullName>
        <label>Stock level – JSW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_level__c</fullName>
        <label>Stock level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technical_Comments__c</fullName>
        <label>Technical Comments</label>
        <picklist>
            <picklistValues>
                <fullName>Product &amp; service briefing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product demonstration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>slab casting attending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cover block distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canopy activity</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Timeline__c</fullName>
        <label>Timeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Top_3_Brands_Visibility__c</fullName>
        <label>Top 3 Brands Visibility</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Top_3_visible_brands__c</fullName>
        <label>Top 3 visible brands</label>
        <picklist>
            <picklistValues>
                <fullName>Ultratech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambuja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kesoram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ramco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zuari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bharti Cements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Priya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maha Cements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dalmia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chettinad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birla Shakti</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Total_potential__c</fullName>
        <inlineHelpText>Includes all Brands</inlineHelpText>
        <label>Total potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_product_qty_required_MT__c</fullName>
        <label>Total product qty required (MT)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_project_duration_Months__c</fullName>
        <label>Total project duration (Months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Activity__c</fullName>
        <label>Type of Activity</label>
        <picklist>
            <picklistValues>
                <fullName>SIte Mix Design Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slab Casting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Plaster Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Godown visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damage Assesment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plant Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer-Mason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer-Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer-Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer-Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Partner visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mason Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counter meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IHB Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineers Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Govt Off Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Site Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mega Mason Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mason Training Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engg College Lecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mix Design Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Staff Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lab Based Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Transfer for Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NDT Testing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Conversion__c</fullName>
        <label>Type of Conversion</label>
        <picklist>
            <picklistValues>
                <fullName>New conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat order</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Customer_Influencer__c</fullName>
        <label>Type of Customer/ Influencer</label>
        <picklist>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eng</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Structural consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing house</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others ( descriptive)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Material__c</fullName>
        <label>Type of Material</label>
        <picklist>
            <picklistValues>
                <fullName>PSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPC/OPC</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visit_Type__c</fullName>
        <label>Visit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unplanned</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit</label>
        <referenceTo>Visit__c</referenceTo>
        <relationshipName>Visit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WS_vs_Retail__c</fullName>
        <label>WS vs Retail(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Wayforward_to_address_these__c</fullName>
        <label>Wayforward to address these</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DCR</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>1/25/2017 12:00 AM</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UV-{0000}</displayFormat>
        <label>Visit Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DCR</pluralLabel>
    <recordTypes>
        <fullName>Daily_Call_Report</fullName>
        <active>false</active>
        <label>Daily Call Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dealer</fullName>
        <active>true</active>
        <label>Dealer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Influencers</fullName>
        <active>true</active>
        <label>Technical Services Visit Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead</fullName>
        <active>true</active>
        <label>Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>NT_INST</fullName>
        <active>true</active>
        <label>NT INST</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Sites</fullName>
        <active>false</active>
        <label>Project Sites</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>